--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -47,5 +47,8 @@ NameValidator_invalidName='%s' is not a valid name. None of the following charac
 NameValidator_nameAlreadyExists=Name '%s' already exists
 FeatureCheckoutHandler_cleanupDialog_title=Cannot Rebase Repository ''{0}''
 FeatureCheckoutHandler_cleanupDialog_text=You have uncommitted changes. Either commit the changes, stash the changes, or discard the changes by resetting the current branch.
+FinishFeatureDialog_squashCheck=&Squash - produce a single commit from the changes in this feature
+FinishFeatureDialog_title=Feature finish options
+FinishFeatureDialog_setParameterForFinishing=Set options for finishing {0}.
 ReleaseFinishOperation_unexpectedConflictsReleaseAborted=Unexpected conflicts while merging to {0}. Finish release aborted.
 HotfixFinishOperation_unexpectedConflictsHotfixAborted=Unexpected conflicts while merging to {0}. Finish hotfix aborted.
