--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1469,6 +1469,7 @@ CommitFileDiffViewer_notContainedInCommit=File {0} is not contained in commit {1
 CommitFileDiffViewer_OpenInEditorMenuLabel=Open &This Version
 CommitFileDiffViewer_OpenPreviousInEditorMenuLabel=Open &Previous Version
 CommitFileDiffViewer_OpenWorkingTreeVersionInEditorMenuLabel=&Open Workspace Version
+StagingView_CompareWithIndexMenuLabel=Compare with Index
 CommitFileDiffViewer_ShowAnnotationsMenuLabel=&Show Annotations
 CommitGraphTable_CommitId=Id
 CommitGraphTable_Committer=Committer
@@ -1757,6 +1758,7 @@ StagingView_committingNotPossible=Committing is not possible
 StagingView_headCommitChanged=\# WARNING: head commit changed in the meantime
 StagingView_noStagedFiles=There are no staged files
 StagingView_NoSelectionTitle=No Repository Selected
+StagingView_CompareMode=Compare Mode
 StagingView_OpenNewCommits=Open New Commits
 StagingView_ColumnLayout=Column Layout
 StagingView_RebaseAbort=Abort
