--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -12,6 +12,7 @@ FinishHandler_conflictsWhileMergingFromTo=Conflicts while merging from {0} to {1
 AbstractGitFlowHandler_finishConflicts=Finishing resulted in conflicts.
 AbstractGitFlowHandler_rebaseConflicts=Rebasing resulted in conflicts.
 FeatureFinishHandler_finishingFeature=Finishing feature...
+FeatureFinishHandler_rewordSquashedCommitMessage=Reword squashed commit message
 FeatureRebaseHandler_problemsOccurred=Problems occurred
 FeatureRebaseHandler_rebaseFailed=Rebase failed.
 FeatureRebaseHandler_rebasingFeature=Rebasing feature...
