--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -12,7 +12,6 @@ FinishHandler_conflictsWhileMergingFromTo=Conflicts while merging from {0} to {1
 AbstractGitFlowHandler_finishConflicts=Finishing resulted in conflicts.
 AbstractGitFlowHandler_rebaseConflicts=Rebasing resulted in conflicts.
 FeatureFinishHandler_finishingFeature=Finishing feature...
-FeatureFinishHandler_rewordSquashedCommitMessage=Reword squashed commit message
 FeatureRebaseHandler_problemsOccurred=Problems occurred
 FeatureRebaseHandler_rebaseFailed=Rebase failed.
 FeatureRebaseHandler_rebasingFeature=Rebasing feature...
@@ -39,6 +38,7 @@ ReleaseFinishHandler_finishingRelease=Finishing release...
 ReleaseFinishHandler_releaseFinishConflicts=Finishing release resulted in conflicts.
 ReleaseStartHandler_provideANameForTheNewRelease=Please provide a name for the new release.
 ReleaseStartHandler_provideReleaseName=Provide release name
+ReleaseStartHandler_startCommitCouldNotBeDetermined=Start commit could not be determined.
 ReleaseStartHandler_startingNewRelease=Starting new Release...
 FeatureCheckoutHandler_checkingOutFeature=Checking out feature...
 FeatureCheckoutHandler_localFeatures=Local features:
