--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1161,7 +1161,8 @@ DecoratorPreferencesPage_bindingChangeSetCommitter=Commit committer name;
 DecoratorPreferencesPage_bindingChangeSetDate=Commit creation date (see date format setting);
 DecoratorPreferencesPage_bindingChangeSetShortMessage=First line of commit message text;
 
-Decorator_exceptionMessage=Errors occurred while applying Git decorations to resources.
+Decorator_exceptionMessage=Errors occurred while applying Git decorations to resource ''{0}''.
+Decorator_exceptionMessageCommon=Errors occurred while applying Git decorations to resources.
 DeleteBranchCommand_CannotDeleteCheckedOutBranch=Cannot delete the currently checked out branch
 DeleteBranchCommand_DeletingBranchesProgress=Deleting branches
 DeleteBranchDialog_DialogMessage=Select a branch to delete
@@ -1757,6 +1758,7 @@ StagingView_commitFailed=Commit failed
 StagingView_committingNotPossible=Committing is not possible
 StagingView_headCommitChanged=\# WARNING: head commit changed in the meantime
 StagingView_noStagedFiles=There are no staged files
+StagingView_BareRepoSelection=Bare Repository Selected
 StagingView_NoSelectionTitle=No Repository Selected
 StagingView_CompareMode=Compare Mode
 StagingView_OpenNewCommits=Open New Commits
