--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -701,6 +701,7 @@ HistoryPreferencePage_toggleAdditionalRefs=&Additional Refs
 HistoryPreferencePage_toggleEmailAddresses=&E-mail addresses in Author/Committer columns
 HistoryPreferencePage_toggleShortenAtStart=&Shorten long tag and branch names at start
 HistoryPreferencePage_MaxBranchLength=Maximum characters to show for a &branch:
+HistoryPreferencePage_MaxDiffLines=Maximum lines to show for a &diff:
 HistoryPreferencePage_MaxTagLength=&Maximum characters to show for a tag:
 HistoryPreferencePage_ShowGroupLabel=Show
 HistoryPreferencePage_ShowInRevCommentGroupLabel=Show in Revision Comment
@@ -1882,3 +1883,5 @@ CancelAfterSaveDialog_Title=Cancel Confirmation
 
 PushMenu_PushHEAD=Push &HEAD...
 PushMenu_PushBranch=Push &Branch ''{0}''...
+
+DiffStyleRangeFormatter_diffTruncated=[...] diff truncated after {0} lines.
