--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -38,6 +38,7 @@ ReleaseFinishHandler_finishingRelease=Finishing release...
 ReleaseFinishHandler_releaseFinishConflicts=Finishing release resulted in conflicts.
 ReleaseStartHandler_provideANameForTheNewRelease=Please provide a name for the new release.
 ReleaseStartHandler_provideReleaseName=Provide release name
+ReleaseStartHandler_startCommitCouldNotBeDetermined=Start commit could not be determined.
 ReleaseStartHandler_startingNewRelease=Starting new Release...
 FeatureCheckoutHandler_checkingOutFeature=Checking out feature...
 FeatureCheckoutHandler_localFeatures=Local features:
