--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -17,6 +17,7 @@
 #    Marc Khouzam <marc.khouzam@ericsson.com> - Add option not to checkout new branch from Gerrit
 #    Mickael Istria (Red Hat Inc.)            - 463339 Simple push wizard improvements
 #    Axel Richard <axel.richard@obeo.fr>      - handle symlink decorator in staging view
+#	 Denis Zygann <d.zygann@web.de> 		  - 473919 Add tooltip text for sorting files action
 ###############################################################################
 AbortRebaseCommand_CancelDialogMessage=The abort operation was canceled
 AbortRebaseCommand_JobName=Aborting Rebase
@@ -1772,6 +1773,7 @@ StagingView_LinkSelection=Link with Editor and Selection
 StagingView_replaceWithFileInGitIndex=Replace with &Index
 StagingView_replaceWithHeadRevision=Replace with &HEAD Revision
 StagingView_UnstageItemMenuLabel=&Remove from Index
+StagingView_UnstagedSort=Sort alphabetically
 StagingView_StageItemMenuLabel=&Add to Index
 StagingView_IgnoreItemMenuLabel=&Ignore
 StagingView_DeleteItemMenuLabel=&Delete
