--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -18,7 +18,6 @@
 #    Mickael Istria (Red Hat Inc.)            - 463339 Simple push wizard improvements
 #    Axel Richard <axel.richard@obeo.fr>      - handle symlink decorator in staging view
 #    Christian Georgi <christian.georgi@sap.com> - Check for empty second line is configurable
-#    Denis Zygann <d.zygann@web.de>           - 473919 Add tooltip text for sorting files action
 ###############################################################################
 AbortRebaseCommand_CancelDialogMessage=The abort operation was canceled
 AbortRebaseCommand_JobName=Aborting Rebase
@@ -817,6 +816,8 @@ CommitDialog_OpenStagingViewLink=Open <a>Git Staging</a> view
 CommitDialog_OpenStagingViewToolTip=For comparing and committing while still being able to navigate and use the editor, try the Git Staging view by clicking the link. The view will be opened with your repository and commit message.
 CommitDialog_Path=Path
 CommitDialog_Title=Commit Changes to Git Repository
+CommitDialog_IgnoreErrors=Ignore warnings and errors
+CommitDialog_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
 CommitDialog_WrongTypeOfCommitMessageProvider=The extension used as CommitMessageProvider has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
 
 SpellcheckableMessageArea_redo=Redo
@@ -1027,6 +1028,13 @@ CommittingPreferencePage_includeUntrackedFiles=Include selected untracked files
 CommittingPreferencePage_includeUntrackedFilesTooltip=Check selected untracked files by default
 CommittingPreferencePage_signedOffBy=Insert Signed-off-by
 CommittingPreferencePage_signedOffByTooltip=Insert "Signed-off-by:" footer by default
+CommittingPreferencePage_CheckBeforeCommitting=Show warning
+CommittingPreferencePage_WarnBeforeCommitting=Warn if there are:
+CommittingPreferencePage_WarnBeforeCommittingTitle=Build problems
+CommittingPreferencePage_WarnBlock_Errors=Errors
+CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
+CommittingPreferencePage_BlockCommit=Block commit button
+CommittingPreferencePage_BlockCommitCombo=Block if there are:
 
 BasicConfigurationDialog_ConfigLocationInfo=These settings will be stored in the Git configuration file in your home directory.
 BasicConfigurationDialog_DialogMessage=When creating a commit, Git records name and e-mail of author and committer. Please fill in the information so that your commits are correctly attributed.
@@ -1781,7 +1789,6 @@ StagingView_LinkSelection=Link with Editor and Selection
 StagingView_replaceWithFileInGitIndex=Replace with &Index
 StagingView_replaceWithHeadRevision=Replace with &HEAD Revision
 StagingView_UnstageItemMenuLabel=&Remove from Index
-StagingView_UnstagedSort=Sort alphabetically
 StagingView_StageItemMenuLabel=&Add to Index
 StagingView_IgnoreItemMenuLabel=&Ignore
 StagingView_DeleteItemMenuLabel=&Delete
@@ -1794,8 +1801,10 @@ StagingView_MergeTool=Merge Tool
 StagingView_AddJob=Adding files to index...
 StagingView_RemoveJob=Removing files from index...
 StagingView_ResetJob=Unstaging files...
+StagingView_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
 
 StagingViewContentProvider_SubmoduleError=Unhandled exception while analyzing submodules
+StagingView_IgnoreErrors=Ignore warnings and errors
 StashApplyCommand_applyFailed=Applying stashed commit ''{0}'' failed due to ''{1}''
 StashApplyCommand_jobTitle=Apply changes from stashed commit ''{0}''
 StashCreateCommand_includeUntrackedLabel=Include untracked files
@@ -1891,3 +1900,6 @@ PushMenu_PushHEAD=Push &HEAD...
 PushMenu_PushBranch=Push &Branch ''{0}''...
 
 DiffStyleRangeFormatter_diffTruncated=[...] diff truncated after {0} lines.
+
+StagingViewPreferencePage_title=Staging View
+StagingViewPreferencePage_maxLimitListMode=Switch to compact mode if files number exceeds:
