--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,6 @@
     <profile>
       <id>platform-luna</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
         <property>
           <name>platform-version-name</name>
           <value>luna</value>
@@ -117,6 +116,7 @@
     <profile>
       <id>platform-mars</id>
       <activation>
+        <activeByDefault>true</activeByDefault>
         <property>
           <name>platform-version-name</name>
           <value>mars</value>
@@ -305,6 +305,7 @@
     <module>org.eclipse.egit.core.test</module>
     <module>org.eclipse.egit.ui.test</module>
     <module>org.eclipse.egit.mylyn.ui.test</module>
+    <module>org.eclipse.egit.ui.importer.tests</module>
 
   </modules>
 
