--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1161,7 +1161,8 @@ DecoratorPreferencesPage_bindingChangeSetCommitter=Commit committer name;
 DecoratorPreferencesPage_bindingChangeSetDate=Commit creation date (see date format setting);
 DecoratorPreferencesPage_bindingChangeSetShortMessage=First line of commit message text;
 
-Decorator_exceptionMessage=Errors occurred while applying Git decorations to resources.
+Decorator_exceptionMessage=Errors occurred while applying Git decorations to resource ''{0}''.
+Decorator_exceptionMessageCommon=Errors occurred while applying Git decorations to resources.
 DeleteBranchCommand_CannotDeleteCheckedOutBranch=Cannot delete the currently checked out branch
 DeleteBranchCommand_DeletingBranchesProgress=Deleting branches
 DeleteBranchDialog_DialogMessage=Select a branch to delete
