--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -4375,6 +4375,181 @@
             </visibleWhen>
          </command>
       </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:compareWithMenu?after=gitCompareWithGroup">
+         <command
+               commandId="org.eclipse.egit.ui.team.CompareIndexWithHead"
+               label="%CompareIndexWithHeadAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+               </reference>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.CompareWithIndex"
+               label="%CompareWithIndexAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+               </reference>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.CompareWithHead"
+               label="%CompareWithHeadAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+               </reference>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.CompareWithPrevious"
+               label="%CompareWithPreviousAction.label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+               </reference>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:compareWithMenu?after=gitCompareWithGroup2">
+         <command
+               commandId="org.eclipse.egit.ui.team.CompareWithCommit"
+               label="%CompareWithCommitAction.label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+               </reference>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.CompareWithRevision"
+               label="%CompareWithBranchOrTagAction.label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+               </reference>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:replaceWithMenu?after=gitReplaceWithGroup">
+         <command
+               commandId="org.eclipse.egit.ui.team.ReplaceWithPrevious"
+               label="%replaceWithPreviousVersionAction.label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+               </reference>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.Discard"
+               label="%DiscardChangesAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+               </reference>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.ReplaceWithHead"
+               label="%ReplaceWithHeadAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+               </reference>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:replaceWithMenu?after=gitReplaceWithGroup2">
+         <command
+               commandId="org.eclipse.egit.ui.team.ReplaceWithCommit"
+               label="%ReplaceWithCommitAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+               </reference>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.ReplaceWithRef"
+               label="%ReplaceWithRefAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+               </reference>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.eclipse.ui.popup.any?after=additions">
+         <menu
+               id="compareWithMenu"
+               label="Compare With">
+            <separator
+                  name="compareWithGroup">
+            </separator>
+            <separator
+                  name="gitCompareWithGroup"
+                  visible="true">
+            </separator>
+            <separator
+                  name="gitCompareWithGroup2"
+                  visible="true">
+            </separator>
+         </menu>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.eclipse.ui.popup.any?after=additions">
+         <menu
+               id="replaceWithMenu"
+               label="Replace With">
+            <separator
+                  name="replaceWithGroup">
+            </separator>
+            <separator
+                  name="gitReplaceWithGroup"
+                  visible="true">
+            </separator>
+            <separator
+                  name="gitReplaceWithGroup2"
+                  visible="true">
+            </separator>
+         </menu>
+      </menuContribution>
    </extension>
    <extension
          name="%RepositoryCommandsLabel"
@@ -5713,5 +5888,33 @@
               name="org.eclipse.egit.ui">
         </bundle>
      </component>
+  </extension>
+  <extension
+        point="org.eclipse.core.expressions.definitions">
+     <definition
+           id="org.eclipse.egit.ui.egitOnlyResourceMapping">
+        <with
+              variable="activeMenuSelection">
+           <iterate
+                 ifEmpty="false"
+                 operator="and">
+              <and>
+                 <adapt
+                       type="org.eclipse.core.resources.mapping.ResourceMapping">
+                    <test
+                          args="org.eclipse.team.core.repository"
+                          property="org.eclipse.core.resources.projectPersistentProperty"
+                          value="org.eclipse.egit.core.GitProvider">
+                    </test>
+                 </adapt>
+                 <not>
+                    <adapt
+                          type="org.eclipse.core.resources.IResource">
+                    </adapt>
+                 </not>
+              </and>
+           </iterate>
+        </with>
+     </definition>
   </extension>
 </plugin>
