--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -38,6 +38,7 @@ InitDialog_chooseBranchNamesAndPrefixes=Choose branch names and prefixes for you
 InitDialog_developBranch=Develop branch
 InitDialog_featureBranchPrefix=Feature branch prefix
 InitDialog_hotfixBranchPrefix=Hotfix branch prefix
+InitDialog_initializeRepository=Initialize repository
 InitDialog_invalidBranchName=Invalid branch name: ''{0}''
 InitDialog_invalidPrefix=Invalid prefix: ''{0}''
 InitDialog_masterBranch=Master branch
